--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,7 +53,7 @@ spring:
               - name
             client-name: Naver
             authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            redirect-uri: http://13.124.143.155:8080/login/oauth2/code/naver
 
           kakao:
             client-id: 159bafd7bb10a9c5a617bf33cf474991
@@ -63,7 +63,7 @@ spring:
               - account_email
             client-name: Kakao
             authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            redirect-uri: http://13.124.143.155:8080/login/oauth2/code/kakao
 
         provider:
           naver:
