--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://mydb.ckfc1hudjneq.ap-northeast-2.rds.amazonaws.com:3306/mytownplace?serverTimezone=Asia/Seoul
-    username: admin
+    username: root
     password: mytownpwd
 
   jpa:
