--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,8 +14,8 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://database-2.ckfc1hudjneq.ap-northeast-2.rds.amazonaws.com:3306/mytownplace?serverTimezone=UTC&characterEncoding=UTF-8
-    username: root
+    url: jdbc:mysql://mydb.ckfc1hudjneq.ap-northeast-2.rds.amazonaws.com:3306/mytownplace?serverTimezone=UTC&characterEncoding=UTF-8
+    username: admin
     password: mytownpwd
 
   jpa:
