--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:database-1://mydb.ckfc1hudjneq.ap-northeast-2.rds.amazonaws.com:3306/mytownplace?serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://database-1.ckfc1hudjneq.ap-northeast-2.rds.amazonaws.com:3306/mytownplace?serverTimezone=UTC&characterEncoding=UTF-8
     username: root
     password: mytowndb
 
