--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@
 			<artifactId>spring-cloud-aws-autoconfigure</artifactId>
 			<version>2.2.1.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-aws</artifactId>
+			<version>2.2.6.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
